--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-
+:root {
+  --main-bg-color: #E6E6E6;
+}
 
 @font-face {
     font-family: 'suisse-intl';
@@ -100,6 +102,36 @@
 }
 
 
+@font-face {
+    font-family: 'mg';
+    src: url('../fonts/MonumentGroteskTrial-Medium.woff');
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'mg';
+    src: url('../fonts/MonumentGroteskTrial-MediumItalic.woff');
+    font-style: italic;
+
+}
+
+
+MonumentGroteskTrial-MediumItalic.woff
+
+::selection {
+  background: #000; /* WebKit/Blink Browsers */
+  color: var(--main-bg-color);
+}
+::-moz-selection {
+  background: #000; /* Gecko Browsers */
+  color: var(--main-bg-color);
+}
+
+a:link, a:visited { text-decoration:underline; color:#000; }
+a:hover {text-decoration:none;}
+
 .link:hover {
     color:#FFF;
 }
@@ -108,7 +140,7 @@ body {
     font-family:suisse-intl;
     font-size:30px;
     font-weight:500;
-    background:#E6E6E6;
+    background:var(--main-bg-color);
     margin:0;
 }
 
@@ -157,6 +189,7 @@ body {
 
 .cPointer {
     cursor:none;
+
 }
 
 #bottom li {
@@ -168,14 +201,32 @@ body {
     position:fixed;
     top:50px; left:50px;
     pointer-events: none;
+    z-index:0;
 }
+
+
+.emphasis {
+    letter-spacing: 0;
+    color: var(--main-bg-color);
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.modal-content .emphasis {
+    letter-spacing:0.06em;
+}
+
 
 #main {
     /*max-width:70vw;*/
     padding:0 2.5rem 2.5rem 2.5rem;
     font-size:80px;
     letter-spacing:-0.04em;
+    line-height:84px;
+    position:relative;
+    z-index:1;
 }
+
+
 
 .link {
     cursor:pointer;
@@ -191,27 +242,35 @@ p {
     top:5vw;
     left:5vw;
     position:fixed;
-    background:#E6E6E6;
+    background:var(--main-bg-color);
     box-sizing:border-box;
     overflow-y: scroll;
     box-sizing:border-box;
     padding:0 1em 1em;
+    border:2px solid #000;
+    z-index:3;
 }
 
-#modal-border {
+/*#modal-border {
     width:90vw;
     height:calc(100vh - 10vw);
     top:5vw;
     left:5vw;
     position:fixed;
-    border:2px solid #000;
+    
     pointer-events: none;
+}*/
+
+.modal-content{
+    max-width:50%;
+
 }
 
 .inline-image {
-        width: 50%;
+    width: 100%;
     max-width: 100%;
     height: auto;
+    display:inline-block;
     /*float: left;*/
     margin-right: 1em;
 }
@@ -240,6 +299,7 @@ p {
 
     #main {
         font-size:21px;
+        line-height:24px;
         padding:4rem 1rem 1rem 1rem;
         letter-spacing: 0;
     }
@@ -254,12 +314,12 @@ p {
      #top {
         display:flex;
         border-bottom:2px solid #000;
-        background: #E6E6E6;
+        background: var(--main-bg-color);
     }
 
     #bottom {
         border-top:2px solid #000;
-        background: #E6E6E6;
+        background: var(--main-bg-color);
     }
 
     #modal-border {
@@ -271,7 +331,16 @@ p {
         height:calc(100vh - 1.5em);
         top:1.5em;
         left:0;
+        border:none;
+        padding:0 0.5em 0.5em;
 
+    }
+
+    .modal-content{
+        font-size:21px;
+        line-height:24px;
+        width:100%;
+        max-width:100%;
     }
 
     .inline-image {
